--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,126 @@
+@layer reset {
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: unset;
+  }
+
+  button,
+  input,
+  textarea,
+  select {
+    font: inherit;
+  }
+
+  img,
+  picture,
+  svg,
+  canvas {
+    display: block;
+    max-inline-size: 100%;
+    block-size: auto;
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    *,
+    *::before,
+    *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+    }
+  }
+}
+
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #1A1A1D;
+
+  background-image: url("/src/assets/sona-anim.gif");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.header {
+  background: rgba(0,0,0,0.5);
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.top-left {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  transition: 0.3s;
+  color: white;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  width: 60px;
+  height: auto;
+  margin: 1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.white {
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(349deg) brightness(100%) contrast(101%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.cart-img {
+  width: 40px;
+  margin-right: 1rem;
+  transition: 0.3s;
 }
 
-.card {
-  padding: 2em;
+.top-left:hover {
+  transform: scale(1.05);
 }
 
-.read-the-docs {
-  color: #888;
+.cart-img:hover {
+  width: 45px;
 }
+
+.title-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.website-name {
+  font-weight: bolder;
+  font-size: 2rem;
+  margin: 0;
+}
+
+.slogan {
+  margin: 0;
+}
+
+.main-holder {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%; /* Ensure it takes full width */
+}
+
