--- a/src/css/MainArea.css
+++ b/src/css/MainArea.css
@@ -30,7 +30,7 @@ opacity: 0.8;
 .pixelify-sans {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <700>;
+    font-weight: 700;
     font-style: normal;
 }
 
