--- a/src/css/SideGenerator.css
+++ b/src/css/SideGenerator.css
@@ -1,10 +1,11 @@
 
   
+  
   /* Medium devices (tablets, 768px and up) */
-  @media (min-width: 745px) {
+  @media (min-width: 900px) {
     .side-gen {
         display: grid;
-        grid-template-columns:50% 50%;
+        grid-template-columns: 50% 50%;
     }
   }
   
@@ -26,7 +27,7 @@
   
 
 .hamburger-holder{
-    display: flex;
+    display: none;
     justify-content: end;
     width: 100%;
 }
@@ -53,5 +54,6 @@
 
 .gen-layout {
     overflow: scroll;
+    width: 100%;
 }
 
