--- a/src/css/ShoppingSidebar.css
+++ b/src/css/ShoppingSidebar.css
@@ -1,16 +1,24 @@
+
+
 .shopping-sidebar-container {
     position: fixed; 
     top: 0;
     right: 0;
-    width: 40%; 
+    width: 18rem; 
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 999;
     transition: transform 0.3s ease-in-out;
     transform: translateX(100%);
+    padding-left: 1rem;
+    overflow: scroll;
 }
 
 .shopping-sidebar-container.active {
     transform: translateX(0);
+}
+
+.basket-entry {
+
 }
 
