--- a/src/css/App.css
+++ b/src/css/App.css
@@ -44,7 +44,7 @@ html, body {
   padding: 0;
   background-color: #1A1A1D;
 
-  background-image: url("/public/assets/sona-anim.gif");
+  background-image: url("/assets/sona-anim.gif");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
