--- a/src/css/ShowMore.css
+++ b/src/css/ShowMore.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     overflow: scroll;
     background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 35rem;
+    padding-bottom: 10rem;
 }
 
 
